<package format="2">
  <name>controller_manager_tests</name>
  <version>0.12.0</version>
  <description>controller_manager_tests</description>
  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/controller_manager_tests</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_control/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_control</url>

  <author>Vijay Pradeep</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>rostest</depend>

  <exec_depend>rosservice</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/test_controllers_plugin.xml"/>
  </export>
</package>
